# 5-final-dizzy-ducks

./: .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: notify.yml  web.yml  worker.yml
api/: index.py  notify.py
email-worker/: .env.example  Dockerfile  email_worker.py  pyproject.toml
email-worker/tests/: test_email_worker.py
tests/: conftest.py  test_auth.py  test_dashboard.py  test_gig_posting.py  test_onboarding.py  test_repositories.py  test_templates.py
web/: Dockerfile  __init__.py  app.py  auth.py  dashboard.py  onboarding.py  repositories.py  requirements.txt  sample_data.py  tags.py
web/app/: __init__.py  db.py
web/app/blueprints/: dev_auth.py  gigs.py  management.py  notify.py  profile.py
web/app/templates/: base.html  dev_login.html  gig_applicants.html  gig_detail.html  gig_form.html  my_applied.html  my_gigs.html  profile.html
web/app/utils/: auth.py
web/static/css/: main.css
web/templates/: base.html  dashboard.html  onboarding.html
web/templates/auth/: login.html  signup.html
web/tests/: test_gigs_apply.py  test_gigs_tracker.py  test_management_profile.py
