[project]
name = "dizzy-ducks"
version = "0.1.0"
description = "Flask and MongoDB gig marketplace."
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4.0",
    "pymongo>=4.6,<5.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "djlint>=1.36",
    "mongomock>=4.1",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["web*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
minversion = "7.0" # minimum pytest version
addopts = "-ra -q --cov=web --cov-report=term-missing --cov-fail-under=80" # default pytest command line options
pythonpath = [
  "."
]
testpaths = [
    "tests",
    "web/tests",
]

[tool.coverage.run]
branch = true
source = ["web"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
